# yaconnectivitytest

./: CLAUDE.md  README.md  connectivity.py  database.py  pyproject.toml  yaconnectivtytest.py
.github/workflows/: ci.yml  deploy-web.yml
scripts/: generate_database_js.py
web/: CNAME  app.js  connectivity.js  database.js  index.html
