[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaconnectivitytest"
version = "0.3.0"
description = "Yet Another Connectivity Test - concurrent HTTP latency tester"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[project.scripts]
yaconnectivitytest = "yaconnectivitytest:main"

[tool.setuptools]
py-modules = ["yaconnectivitytest", "connectivity", "database"]
